Added sound button, img for the sound button

--- a/styles/style.css
+++ b/styles/style.css
@@ -127,4 +127,11 @@ button:hover {
     float: right;
 }
 
+/* Speaker */
+
+#speaker {
+    width: 35px;
+    padding: 5px;
+    margin: auto; 
+}
 
