--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,7 @@ html {
 
 /* Colocacion CSS Grid Slots de Tragaperras */
 .slot-machine {
+    box-shadow: 3px 4px 4px 1px #7a413c;
     border: 1px solid #ccc;
     border-radius: 5px;
     position: absolute;
@@ -43,7 +44,8 @@ Espacio padding entre elementos y botones 5,10px */
     display: grid;
     grid-template-columns: repeat(3,1fr);
     padding: 5px;
-    grid-column-gap: 10px;   
+    grid-column-gap: 10px;
+     
 }
 
 .slot-container-1 {
@@ -52,14 +54,21 @@ Espacio padding entre elementos y botones 5,10px */
     justify-content: space-between;
     /*  */
     width: 100%;
-    height: 30%;
-     
+    height: 30%; 
 }
 
 .img-frutas {
     /* background-color: pink; */
     width: 33%;
-    height: 128px; 
+    height: 135px;
+    border:2px solid #070201;
+    border-radius:10px;
+}
+
+.img-frutas > img {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 .slot-container {
@@ -105,10 +114,9 @@ Espacio padding entre elementos y botones 5,10px */
 
 #btn-1 {
     margin: 0 auto;
-    width: 50%;
-    height: 37px;
-    font-family: 'Space Mono', monospace;
+    height:37px;
     font-size: 14px;
+    vertical-align: middle;
 }
 
 /* Titulos */
@@ -126,16 +134,29 @@ h2 {
 
 /* Estilado de los botones */
 .slot-button {
-    font-family: 'Space Mono', monospace;
-    font-size: 14px;
-    font-style: bold;
-    align-items: center;
+	box-shadow: 3px 4px 4px 1px #8a2a21;
+	background:linear-gradient(to bottom, #c62d1f 5%, #f24437 100%);
+	background-color:#c62d1f;
+	border-radius:10px;
+	border:2px solid #d02718;
+	align-items: center;
     justify-content: center;
-    
+	cursor:pointer;
+	color:#ffffff;
+	font-family: 'Space Mono', monospace;
+    font-size: 14px;
+	padding:10px 70px;
+	text-decoration:none;
+	text-shadow:3px 1px 2px #810e05;
 }
-/* 
-button:hover {
-} */
+.slot-button:hover {
+	background:linear-gradient(to bottom, #f24437 5%, #c62d1f 100%);
+	background-color:#f24437;
+}
+.slot-button:active {
+	position:relative;
+	top:1px;
+}
 
 /*  */
 .img-decor-left {
