--- a/styles/style.css
+++ b/styles/style.css
@@ -27,14 +27,14 @@ html {
 
 /* Colocacion CSS Grid Slots de Tragaperras */
 .slot-machine {
-    box-shadow: 3px 4px 4px 1px #7a413c;
+    box-shadow: 3px 4px 4px 1px #fff6af;
     border: 1px solid #ccc;
     border-radius: 5px;
     position: absolute;
     top: 50%; 
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 470px;
+    width: 480px;
 }
 
 /* CSS Grid - Dsiplay Grid
@@ -63,12 +63,15 @@ Espacio padding entre elementos y botones 5,10px */
     height: 135px;
     border:2px solid #070201;
     border-radius:10px;
+    background-color: white;
 }
 
 .img-frutas > img {
     margin-left: auto;
     margin-right: auto;
     display: block;
+    border-radius: 10px;
+   
 }
 
 .slot-container {
@@ -89,6 +92,7 @@ Espacio padding entre elementos y botones 5,10px */
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    margin: 0 auto;
     
 }
 
@@ -98,10 +102,9 @@ Espacio padding entre elementos y botones 5,10px */
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-    padding: 6px;
     grid-gap: 10px; 
     margin-top: auto;
-    margin-bottom: auto;
+    margin-bottom: 5px;
     height: 35px;
 }
 
@@ -114,9 +117,9 @@ Espacio padding entre elementos y botones 5,10px */
 
 #btn-1 {
     margin: 0 auto;
-    height:37px;
+    height:40px;
     font-size: 14px;
-    vertical-align: middle;
+    
 }
 
 /* Titulos */
@@ -125,6 +128,7 @@ Espacio padding entre elementos y botones 5,10px */
     padding: 6px;
     text-align: center; 
     vertical-align: middle;
+    margin: 5px;
 }
 
 h2 {
@@ -134,24 +138,24 @@ h2 {
 
 /* Estilado de los botones */
 .slot-button {
-	box-shadow: 3px 4px 4px 1px #8a2a21;
-	background:linear-gradient(to bottom, #c62d1f 5%, #f24437 100%);
-	background-color:#c62d1f;
+	box-shadow: 0px 1px 0px 0px #fff6af;
+	background: linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
+	background-color:#ffec64;
 	border-radius:10px;
-	border:2px solid #d02718;
+	border:2px solid #ffaa22;
 	align-items: center;
     justify-content: center;
 	cursor:pointer;
-	color:#ffffff;
+	color:#333333;
 	font-family: 'Space Mono', monospace;
     font-size: 14px;
 	padding:10px 70px;
 	text-decoration:none;
-	text-shadow:3px 1px 2px #810e05;
+	text-shadow:3px 1px 2px #ffee66;
 }
 .slot-button:hover {
-	background:linear-gradient(to bottom, #f24437 5%, #c62d1f 100%);
-	background-color:#f24437;
+	background:linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
+	background-color:#ffab23;
 }
 .slot-button:active {
 	position:relative;
@@ -172,7 +176,7 @@ h2 {
 #speaker {
     width: 35px;
     padding: 5px;
-    margin: auto; 
+    float: right;
 }
 
 
