--- a/slot-machine-react/src/components/Logo/Logo.module.css
+++ b/slot-machine-react/src/components/Logo/Logo.module.css
@@ -1,5 +1,11 @@
 .Logo{
-    background-color: tomato;
+    background: linear-gradient(to bottom,#a7ff83, 50%, #e8ffe8 100%);
     /* row-start / col-start / row-end / col-end */
     grid-area: 1 / 1 / 2 / 4;
+}
+
+.SlotBrand {
+    display: flex;
+    justify-content: space-between;
+    margin: 5px 5px;
 }
