--- a/slot-machine-react/src/components/InputCoins/InputCoins.module.css
+++ b/slot-machine-react/src/components/InputCoins/InputCoins.module.css
@@ -1,5 +1,25 @@
 .InputCoins {
-    background-color: #ccc;
     /* row-start / col-start / row-end / col-end */
     grid-area: 2 / 1 / 3 / 4;
+    background-color:  #e8ffe8;
 }
+
+.InsertCoins {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10px 10px;
+}
+
+.Input {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10px 10px;
+}
+
+p {
+    margin: 0;
+    text-align: center;
+}
+
